gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail22827.d
version https://git-lfs.github.com/spec/v1
oid sha256:af5b8775a8f748829a8956d91cdd0f06b2e9615f31051e142eeb4b8e2e546c71
size 324
